# leadanne2

./: .dockerignore  .gitignore  Dockerfile.server  Dockerfile.worker  README.md  ROADMAP.md  context.json  deploy.sh  docker-compose.debug.yml  docker-compose.dev.yml  docker-compose.yml  docker.env  handler.py  inventory.yml  main.py  manage.py  package-lock.json  package.json  pyproject.toml  serverless.template.yml  serverless.yml  settings.yaml  tests.py
.github/workflows/: deploy.yml
core/: __init__.py  admin.py  apps.py  chatgpt.py  models.py  serializers.py  tasks.py
core/management/commands/: runcelery.py
core/migrations/: 0001_initial.py  0002_remove_questionoption_index_and_more.py
core/views/: __init__.py  quiz.py  result.py
examples/: consumer_event.json  producer_event.json  webhook_payload.json  webhook_payload_pt.json
leadanne2/: __init__.py  asgi.py  celery.py  chatgpt.py  cli.py  config.py  email.py  email_service.py  llm.py  schema.py  server.py  settings.py  tasks.py  urls.py  utils.py  vector_store.py  worker.py  wsgi.py
playbooks/: deploy.yml  prepare.yml
quiz/: models.py
supabase/: config.toml
supabase/migrations/: 20240510202609_init.sql
templates/: rating.html
templates/email/: AI_Lead_Generation.html  AI_Lead_Generation_PT.html
templates/email/shared/: rating.html
test/: conftest.py  example_reply.json  test_email_service.py  test_llm.py  tests.py  webhook_payload.json  webhook_payload_pt.json
test/snapshots/test_email_service/test_render_html_body/: rendered.html  rendered_pt.html
