[tool.poetry]
name = "leadanne2"
version = "0.2.0"
description = ""
authors = ["Pedro Antonio <pedro@z33dd.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.0"
python-dotenv = "^1.0.0"
kombu = "^5.3.4"
markdown = "^3.5.1"
postmarker = "^1.0"
openai = "^1.3.9"


[tool.poetry.group.dev.dependencies]
black = "^23.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
